// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllowableActions existing list, existing properties 1`] = `
<div
  className="col-md-3 col-xs-12"
>
  <div
    className="domain-field-section-heading"
  >
    Allow these Actions
  </div>
  <div
    className="list__properties__allowable-actions"
  >
    <div
      className="list__properties__checkbox-row"
    >
      <span
        className="list__properties__no-highlight"
        onClick={[Function]}
      >
        <span
          className="fa fa-lg fa-check-square"
          style={
            {
              "color": "#0073BB",
            }
          }
        />
      </span>
      <span
        className="list__properties__checkbox-text"
      >
        Delete
      </span>
    </div>
    <div
      className="list__properties__checkbox-row"
    >
      <span
        className="list__properties__no-highlight"
        onClick={[Function]}
      >
        <span
          className="fa fa-lg fa-check-square"
          style={
            {
              "color": "#0073BB",
            }
          }
        />
      </span>
      <span
        className="list__properties__checkbox-text"
      >
        Upload
      </span>
    </div>
    <div
      className="list__properties__checkbox-row"
    >
      <span
        className="list__properties__no-highlight"
        onClick={[Function]}
      >
        <span
          className="fa fa-lg fa-check-square"
          style={
            {
              "color": "#0073BB",
            }
          }
        />
      </span>
      <span
        className="list__properties__checkbox-text"
      >
        Export & Print
      </span>
    </div>
  </div>
</div>
`;

exports[`AllowableActions new list, default properties 1`] = `
<div
  className="col-md-3 col-xs-12"
>
  <div
    className="domain-field-section-heading"
  >
    Allow these Actions
  </div>
  <div
    className="list__properties__allowable-actions"
  >
    <div
      className="list__properties__checkbox-row"
    >
      <span
        className="list__properties__no-highlight"
        onClick={[Function]}
      >
        <span
          className="fa fa-lg fa-check-square"
          style={
            {
              "color": "#0073BB",
            }
          }
        />
      </span>
      <span
        className="list__properties__checkbox-text"
      >
        Delete
      </span>
    </div>
    <div
      className="list__properties__checkbox-row"
    >
      <span
        className="list__properties__no-highlight"
        onClick={[Function]}
      >
        <span
          className="fa fa-lg fa-check-square"
          style={
            {
              "color": "#0073BB",
            }
          }
        />
      </span>
      <span
        className="list__properties__checkbox-text"
      >
        Upload
      </span>
    </div>
    <div
      className="list__properties__checkbox-row"
    >
      <span
        className="list__properties__no-highlight"
        onClick={[Function]}
      >
        <span
          className="fa fa-lg fa-check-square"
          style={
            {
              "color": "#0073BB",
            }
          }
        />
      </span>
      <span
        className="list__properties__checkbox-text"
      >
        Export & Print
      </span>
    </div>
  </div>
</div>
`;

exports[`BasicPropertiesFields existing list, existing properties 1`] = `
<div
  className="col-md-7 col-xs-12"
>
  <div
    className="domain-field-section-heading"
  >
    Basic Properties
  </div>
  <div
    className="margin-top row"
  >
    <div
      className="col-lg-2 col-xs-3"
    >
      <span
        className="domain-no-wrap"
      >
        Name
        <span
          className="label-help-target"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <span
            className="label-help-icon fa fa-question-circle"
          />
        </span>
         *
      </span>
    </div>
    <div
      className="col-lg-8 col-xs-9"
    >
      <input
        className="form-control"
        id="name"
        onChange={[MockFunction]}
        placeholder="Enter a name for this list"
        type="text"
        value="NIMHDemographics"
      />
    </div>
    <div
      className="col-lg-2"
    />
  </div>
  <div
    className="margin-top row"
  >
    <div
      className="col-lg-2 col-xs-3"
    >
      <span
        className="domain-no-wrap"
      >
        Description
        
      </span>
    </div>
    <div
      className="col-lg-8 col-xs-9"
    >
      <textarea
        className="form-control textarea-noresize"
        id="description"
        onChange={[MockFunction]}
        value=""
      />
    </div>
    <div
      className="col-lg-2"
    />
  </div>
</div>
`;

exports[`BasicPropertiesFields new list, default properties 1`] = `
<div
  className="col-md-7 col-xs-12"
>
  <div
    className="domain-field-section-heading"
  >
    Basic Properties
  </div>
  <div
    className="margin-top row"
  >
    <div
      className="col-lg-2 col-xs-3"
    >
      <span
        className="domain-no-wrap"
      >
        Name
        <span
          className="label-help-target"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <span
            className="label-help-icon fa fa-question-circle"
          />
        </span>
         *
      </span>
    </div>
    <div
      className="col-lg-8 col-xs-9"
    >
      <input
        className="form-control"
        id="name"
        onChange={[MockFunction]}
        placeholder="Enter a name for this list"
        type="text"
        value=""
      />
    </div>
    <div
      className="col-lg-2"
    />
  </div>
  <div
    className="margin-top row"
  >
    <div
      className="col-lg-2 col-xs-3"
    >
      <span
        className="domain-no-wrap"
      >
        Description
        
      </span>
    </div>
    <div
      className="col-lg-8 col-xs-9"
    >
      <textarea
        className="form-control textarea-noresize"
        id="description"
        onChange={[MockFunction]}
        value=""
      />
    </div>
    <div
      className="col-lg-2"
    />
  </div>
</div>
`;
